# hand_eye_calibration

./: CMakeLists.txt  gazebo_20_2_2015.data  package.xml
autonomous_config/: auto_config.yaml
checkerboard_config/: checkerboard_config.yaml  sim_checkerboard_config.yaml
config/: fake_pose_config.yaml
config/autonomous_config/: auto_config.yaml
config/checkerboard_config/: sim_checkerboard_config.yaml
gazebo/launch/: cam_pointing_at_checkerboard_on_ground.launch  youbot_camera_calibration_sim.launch
gazebo/models/camera/: camera.gazebo.xacro  camera.urdf.xacro
gazebo/models/checkerboard_textured_1/: checkerboard.material  model.config  model.sdf
gazebo/worlds/: checkerboard_on_floor_edge_at_x0y0.world  checkerboard_standing_at_x-1.5y0z0.world
gazebo_models/checkerboard/: model.config  model.sdf
gazebo_models/checkerboard_textured/: checkerboard.material  model.config  model.sdf
gazebo_models/checkerboard_textured_1/: model.sdf
gazebo_models/colored_screen/: model.config  model.sdf
include/hand_eye_calibration/: DualQuaternionTransformationEstimator.hpp  EyePositionFromCheckerboard.hpp  YoubotLinkPositionPublisher.hpp  autonomous_hand_eye_calibrator.h  calibration_setup.h  dual_quaternion_transformation_estimator.h  estimation_data.h  eye_position_from_checkerboard.h  park_1994_estimation.h  pose_creator.h  tf2_republisher.h  transformation_estimation_method.h  transformation_estimator.h  youbot_link_position_publisher.h
include/utils/: continuous_x_dim_space_iterator.h  eigen_utils.h  iterator_bouncer.h  math.h  multi_dimensional_space_iterator.h  numeric_iterator.h  ros_eigen.h
launch/: autonomous_calibration.launch  eye_position_estimator.launch  fake_pose_server.launch  sim_checkerboard.launch
msg/: CameraPoseDescription.msg  CameraPoseNodeInfo.msg  HandPoseDescription.msg  NumberedRequest.msg
src/: DualQuaternionTransformationEstimator.cpp  EyePositionFromCheckerboard.cpp  YoubotLinkPositionPublisher.cpp  autonomous_calibration.cpp  autonomous_hand_eye_calibrator.cpp  dual_quaternion_estimation_node.cpp  dual_quaternion_transformation_estimator.cpp  eye_position_from_checkerboard.cpp  eye_position_from_checkerboard_node.cpp  tf2_republisher.cpp  tf2_republisher_node.cpp  transformation_estimator.cpp  youbot_link_position_publisher.cpp  youbot_link_position_publisher_node.cpp
src/hand_eye_calibration/: autonomous_calibration.cpp  autonomous_hand_eye_calibrator.cpp  calibration_setup.cpp  dual_quaternion_estimation_node.cpp  dual_quaternion_transformation_estimator.cpp  estimation_data.cpp  eye_position_from_checkerboard.cpp  fake_pose_server.cpp  pose_creator.cpp  tf2_republisher.cpp  transformation_estimator.cpp  transformation_test.cpp  youbot_link_position_publisher.cpp
src/hand_eye_calibration/code_base/: autonomous_hand_eye_calibrator.cpp  dual_quaternion_transformation_estimator.cpp  estimation_data.cpp  eye_position_from_checkerboard.cpp  park_1994_estimation.cpp  pose_creator.cpp  transformation_estimator.cpp  youbot_link_position_publisher.cpp
src/hand_eye_calibration/ros_nodes/: autonomous_calibration.cpp  dual_quaternion_estimation_node.cpp  fake_pose_server.cpp  transformation_test.cpp
src/utils/: eigen_utils.cpp  math.cpp  ros_eigen.cpp
srv/: CameraPose.srv  CameraPoseInfo.srv  HandPose.srv
test_data/: manually_retrieved_simulation_data.txt  simulation_data.txt
test_data/March15/: simulation2.yaml  simulation_data.data
